/*
 * $Id: ChangeLog,v 1.6544 2009/08/17 01:20:41 lculik Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2009-08-17 20:09 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>
  * source/debug/tbrwtext.prg
    ! Bug fixed in Search() method (by Alexander Kresin, borrowed from
      Harbour).
    ! Fixed RTE on deleting the last tracepoint.
  * ChangeLog
    ! Fixed typos in recent ChangeLog entries by Luiz.
  * ChangeLog.028
    ! Fixed Viktor's name in the ChangeLog.

2009-08-16 22:20 UTC-0300 Luiz Rafael Culik <luiz at xharbour.com.br>
  * source/tip/ftpcln.prg
    source/tip/popln.prg
    source/tip/smtpcln.prg
    minor fix to previus commit

2009-08-16 11:40 UTC-0300 Luiz Rafael Culik <luiz at xharbour.com.br>
  * source/tip/client.prg
    init ::nhandle as -1
  * source/tip/ftpcln.prg
    source/tip/popln.prg
    source/tip/smtpcln.prg
    ! added destructor to close trace file, if still open
  * source/tip/utils.c
    ! fixes to tip_timestamp provided by Klaus

2009-08-15 21:05 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * contrib/png/png.c
  * contrib/png/png.h
  * contrib/png/pngconf.h
  * contrib/png/pngerror.c
  * contrib/png/pngget.c
  * contrib/png/pngmem.c
  * contrib/png/pngpread.c
  * contrib/png/pngread.c
  * contrib/png/pngrio.c
  * contrib/png/pngrtran.c
  * contrib/png/pngrutil.c
  * contrib/png/pngset.c
  * contrib/png/pngtrans.c
  * contrib/png/pngwio.c
  * contrib/png/pngwrite.c
  * contrib/png/pngwtran.c
  * contrib/png/pngwutil.c
    ! updated to version 1.2.39

2009-08-11 10:30 UTC-0300 Eduardo Fernandes <modalsist@yahoo.com.br>
  * makefile.pc
    * commented "/alternatename" link flag. Needed only for PellesC 5.x

  * utils\hbmake\hbmake.prg
    * commented "/alternatename" link flag. Needed only for PellesC 5.x

2009-08-11 09:00 UTC-0300 Luiz Rafael Culik <luiz at xharbour.com.br>